--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build cross-env NODE_OPTIONS=--max-old-space-size=4096",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
+    "cross-env": "^7.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
