--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       ],
       "@shared/services": [
         "src/shared/services"
+      ],
+      "@shared/api": [
+        "src/shared/api/v1"
       ]
     },
     "forceConsistentCasingInFileNames": true,
