add payment method to registration process, fix changes in api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
       "@shared/module": [
         "src/shared/module"
       ],
+      "@shared/entities": [
+        "src/shared/entities"
+      ],
+      "@shared/helpers": [
+        "src/shared/helpers"
+      ],
       "@feature": [
         "src/features"
       ],
