add dashboard page, add dashboard main page, fix bugs and styles and add ui components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
       "@shared/helpers": [
         "src/shared/helpers"
       ],
+      "@shared/tables": [
+        "src/shared/tables"
+      ],
       "@feature": [
         "src/features"
       ],
