update logic with header on main when redirect to contact page and back. fix bugs 1340, 1339, 1336

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             },
             "allowedCommonJsDependencies": [
               "text-mask-core",
-              "dompurify"
+              "dompurify",
+              "file-saver"
             ],
             "outputPath": "dist/smarti-client",
             "index": "src/index.html",
