--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@taiga-ui/addon-mobile": "^3.48.0",
     "@taiga-ui/cdk": "^3.35.0",
     "@taiga-ui/core": "^3.35.0",
     "@taiga-ui/icons": "^3.35.0",
@@ -65,6 +66,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3",
     "webpack-bundle-analyzer": "^4.9.0"
   }
