add login in registration process, add dialogs for last two registration steps, delete all unused code and fix bugs and warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -73,6 +73,7 @@
       "dom"
     ],
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
