--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@ngxs/store": "^3.8.1",
     "@taiga-ui/addon-mobile": "^3.48.0",
     "@taiga-ui/cdk": "^3.35.0",
     "@taiga-ui/core": "^3.35.0",
@@ -70,5 +69,10 @@
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3",
     "webpack-bundle-analyzer": "^4.9.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
