--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-rxjs": "^5.0.3",
     "eslint-plugin-unicorn": "^48.0.1",
     "file-saver": "^2.0.5",
+    "npm": "^10.2.2",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-attributes": "^1.0.0",
     "rxjs": "~7.8.0",
