--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,12 +53,12 @@
         "src/shared/api/web-api"
       ]
     },
-    "strictPropertyInitialization": true,
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
